[project]
name = "unblu-docs-explorer"
version = "0.1.0"
description = "A way to explore Unblu documentation and ask questions about it"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.1.2",
    "pre-commit>=4.0.1",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "pytest-asyncio>=0.25.0",
]

[[project.authors]]
name = "Ismar Iljazovic"
email = "ismart@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.3",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
unblu-docs-explorer = "unblu_docs_explorer:main"

[tool.ruff]
line-length = 120
exclude = [
    "docs/**",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
